Cambie unas cosas de los pom hijos y padre, arregle una cosa de los puertos, termine de configurar docker y  arregle los JWT